--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="/src/Linea Logos/Logomark Black BG.png" type="image/x-icon">
     <title>Linea XP Checker</title>
 </head>
 <body>
@@ -14,7 +15,16 @@
             <div class="nav">
             <button class="showMenuBtn" onclick="showMenu()" ><i class="fa-solid fa-bars"></i></button>
             <button onclick="hideMenu()" class="hideMenuBtn hidden"><i class="fa-solid fa-bars-staggered"></i></button>
-            <div class="navDiv hidden"></div>
+            <div class="navDiv hidden">
+                <div class="tweets">
+                    <a class="twitter-timeline" data-lang="en" data-width="400" data-height="250" data-dnt="true" data-theme="dark" href="https://twitter.com/LineaBuild?ref_src=twsrc%5Etfw">Tweets by LineaBuild</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                </div>
+                <div class="socials">
+                    <a href="https://github.com/amank3125" target="_blank"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://x.com/0xamank" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
+                    <a href="https://x.com/LineaBuild" target="_blank"><img src="./src/Linea Logos/Logomark Black BG.png" alt="lineaLogo" class="lineaSocial" height="42px"></a>
+                </div>
+            </div>
         </div>  </div>
         <div class="errorContainer hidden"><div class="errorIcon">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" viewBox="0 0 24 24" height="24" fill="none"><path fill="#393a37" d="m13 13h-2v-6h2zm0 4h-2v-2h2zm-1-15c-1.3132 0-2.61358.25866-3.82683.7612-1.21326.50255-2.31565 1.23915-3.24424 2.16773-1.87536 1.87537-2.92893 4.41891-2.92893 7.07107 0 2.6522 1.05357 5.1957 2.92893 7.0711.92859.9286 2.03098 1.6651 3.24424 2.1677 1.21325.5025 2.51363.7612 3.82683.7612 2.6522 0 5.1957-1.0536 7.0711-2.9289 1.8753-1.8754 2.9289-4.4189 2.9289-7.0711 0-1.3132-.2587-2.61358-.7612-3.82683-.5026-1.21326-1.2391-2.31565-2.1677-3.24424-.9286-.92858-2.031-1.66518-3.2443-2.16773-1.2132-.50254-2.5136-.7612-3.8268-.7612z"></path></svg>
