--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="shimmer"></div>
             <div class="shimmer"></div>
         </div><div class="lxpHistory"></div></span></div></div>
-        <div class="footer"><p class="disclaimer">This is an unofficial tool. It has no links with linea foundation or it's parent organisations.</p>
+        <div class="footer"><p class="disclaimer">Note: This is an unofficial tool and is not affiliated with the Linea Foundation or its parent organizations.</p>
         </div>
     </div>
     <script src="app.js"></script>
